added tiny css fixes for ie 7; improved select in ie7

--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <link rel="stylesheet" href="css/cfe.css" />
+    <!--[ if IE7]>
+      <link rel="stylesheet" href="css/ie7.css" />
+    <![endif]-->
+    
     <style type="text/css">
       /* resetting styles for browsers */
 
