--- a/demo.html
+++ b/demo.html
@@ -399,12 +399,27 @@
       </fieldset>
     </form>
 
-    <script src="lib/mootools-1.2.4-core.js" type="text/javascript"></script>
-    <script src="lib/mootools-1.2.4-more.js" type="text/javascript"></script>
-    <script src="cfe-minified/cfe.js" type="text/javascript"></script>
-    <script src="cfe-minified/addons/cfe.addon.dependencies.js" type="text/javascript"></script>
-    <script src="cfe-minified/addons/cfe.addon.toggleCheckboxes.js" type="text/javascript"></script>
-    <script src="cfe-minified/addons/cfe.addon.toolTips.js" type="text/javascript"></script>
-    <script src="cfe.autostart.sample.js" type="text/javascript"></script>
+    <script src="cfe/lib/mootools-core-1.3.js" type="text/javascript"></script>
+    <script src="cfe/lib/mootools-more-1.3.0.1.js" type="text/javascript"></script>
+    <script src="cfe/base/cfe.base.js" type="text/javascript"></script>
+    <script src="cfe/replace/cfe.replace.js" type="text/javascript"></script>
+    <script src="cfe/modules/check/cfe.module.checkbox.js" type="text/javascript"></script>
+    <script src="cfe/modules/check/cfe.module.radio.js" type="text/javascript"></script>
+    <script src="cfe/modules/button/cfe.module.button.js" type="text/javascript"></script>
+    <script src="cfe/modules/button/cfe.module.image.js" type="text/javascript"></script>
+    <script src="cfe/modules/button/cfe.module.reset.js" type="text/javascript"></script>
+    <script src="cfe/modules/button/cfe.module.submit.js" type="text/javascript"></script>
+    <script src="cfe/modules/file/cfe.module.file.js" type="text/javascript"></script>
+    <script src="cfe/modules/group/cfe.module.fieldset.js" type="text/javascript"></script>
+    <script src="cfe/modules/select/cfe.module.select.js" type="text/javascript"></script>
+    <script src="cfe/modules/select/cfe.module.select.multiple.js" type="text/javascript"></script>
+    <script src="cfe/modules/text/cfe.module.password.js" type="text/javascript"></script>
+    <script src="cfe/modules/text/cfe.module.slider.js" type="text/javascript"></script>
+    <script src="cfe/modules/text/cfe.module.text.js" type="text/javascript"></script>
+    <script src="cfe/modules/text/cfe.module.textarea.js" type="text/javascript"></script>
+    <script src="cfe/addons/cfe.addon.dependencies.js" type="text/javascript"></script>
+    <script src="cfe/addons/cfe.addon.toggleCheckboxes.js" type="text/javascript"></script>
+    <script src="cfe/addons/cfe.addon.toolTips.js" type="text/javascript"></script>
+    <script src="cfe/cfe.autostart.sample.js" type="text/javascript"></script>
   </body>
 </html>
