--- a/demo.html
+++ b/demo.html
@@ -87,7 +87,7 @@
   </head>
   <body>
     <h1>CFE Barebone Example</h1>
-    <p>for mootools 1.2</p>
+    <p>for mootools 1.3</p>
     <p>
       <a href="http://customformelements.net">Visit homepage</a>
     </p>
@@ -400,26 +400,34 @@
     </form>
 
     <script src="cfe/lib/mootools-core-1.3.js" type="text/javascript"></script>
-    <script src="cfe/lib/mootools-more-1.3.0.1.js" type="text/javascript"></script>
+    <script src="cfe/lib/mootools-more-1.3.js" type="text/javascript"></script>
     <script src="cfe/base/cfe.base.js" type="text/javascript"></script>
     <script src="cfe/replace/cfe.replace.js" type="text/javascript"></script>
-    <script src="cfe/modules/check/cfe.module.checkbox.js" type="text/javascript"></script>
-    <script src="cfe/modules/check/cfe.module.radio.js" type="text/javascript"></script>
+    
+    <!-- add modules first, on which other modules depend -->
     <script src="cfe/modules/button/cfe.module.button.js" type="text/javascript"></script>
+    <script src="cfe/modules/text/cfe.module.text.js" type="text/javascript"></script>
+    <script src="cfe/modules/check/cfe.module.checkbox.js" type="text/javascript"></script>
+    <script src="cfe/modules/button/cfe.module.submit.js" type="text/javascript"></script>
+    <script src="cfe/modules/select/cfe.module.select.js" type="text/javascript"></script>
+
+    <!-- add other modules afterwards -->
+    <script src="cfe/modules/check/cfe.module.radio.js" type="text/javascript"></script>
     <script src="cfe/modules/button/cfe.module.image.js" type="text/javascript"></script>
     <script src="cfe/modules/button/cfe.module.reset.js" type="text/javascript"></script>
-    <script src="cfe/modules/button/cfe.module.submit.js" type="text/javascript"></script>
     <script src="cfe/modules/file/cfe.module.file.js" type="text/javascript"></script>
     <script src="cfe/modules/group/cfe.module.fieldset.js" type="text/javascript"></script>
-    <script src="cfe/modules/select/cfe.module.select.js" type="text/javascript"></script>
     <script src="cfe/modules/select/cfe.module.select.multiple.js" type="text/javascript"></script>
     <script src="cfe/modules/text/cfe.module.password.js" type="text/javascript"></script>
     <script src="cfe/modules/text/cfe.module.slider.js" type="text/javascript"></script>
-    <script src="cfe/modules/text/cfe.module.text.js" type="text/javascript"></script>
     <script src="cfe/modules/text/cfe.module.textarea.js" type="text/javascript"></script>
+
+    <!-- load addons last -->
     <script src="cfe/addons/cfe.addon.dependencies.js" type="text/javascript"></script>
     <script src="cfe/addons/cfe.addon.toggleCheckboxes.js" type="text/javascript"></script>
     <script src="cfe/addons/cfe.addon.toolTips.js" type="text/javascript"></script>
+
+    <!-- autostart file -->
     <script src="cfe/cfe.autostart.sample.js" type="text/javascript"></script>
   </body>
 </html>
